--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "maatwebsite/excel": "^3.1",
         "milon/barcode": "^10.0",
         "riskihajar/terbilang": "^2.0",
         "yajra/laravel-datatables-oracle": "^10.0"
@@ -21,7 +22,9 @@
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
+        "phpoffice/phpspreadsheet": "^1.28",
         "phpunit/phpunit": "^10.0",
+        "rector/rector": "^0.15.25",
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
